--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 .bg {
   /* The image used */
-  background-image: url("./1n_1_.jpg");
+  background-image: url("kledis.w3spaces-preview.com-index.html
+/1n_1_.jpg
+");
 
   /* Full height */
   height: 100%; 
@@ -114,7 +116,9 @@ div.c {
 </div>
     <header class="bg" style="max-width:1600px">
        <div class="header">
-        <img src="./1n_1_.jpg" alt="Snow" style="width:100%">
+        <img src="kledis.w3spaces-preview.com-index.html
+/1n_1_.jpg
+" alt="Snow" style="width:100%">
             <div class="h" id="child1"><i>Indus Violet</i></div>
         
         <div class="centered header">
